# thecont1.github.io

./: .gitignore  README.md  WARP.md  astro.config.mjs  deploy.sh  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: astro.yml  deploy.yml
about/: 1  2  3  4  error_log  index.php  send.php
docs/: C2PA.md  DEPLOYMENT.md  R2_WORKFLOW.md  README.md  SEO_IMPLEMENTATION.md  SEO_SUMMARY.md  SITE_SPEC.md  WARP.md
ism/css/: my-slider.css
playwright-report/: index.html
public/: curtain-scroll-fallback.js  mobile-nav.js  robots.txt  snow-loader.js  snow.js  textmode.js
remote-only/: .htaccess
scripts/: .notebook-shas.json  R2_WORKFLOW.md  build_exif.py  c2pa_xtract.py  deploy_ftp.sh  generate-repo-content.js  generate_r2_metadata.sh  playwright.config.ts  r2_two_way_sync.sh  render_notebook.py  scaffold-integration.ts  sync_r2_metadata.sh  upload_to_r2.sh
scripts/workers/: image-wrapper.js  wrangler.toml
src/: content.config.ts
src/components/: SEO.astro  SiteFooter.astro  SiteHeader.astro  StructuredData.astro
src/content/: config.ts
src/data/: author.ts  carousel.ts  faq-schema.json  featured.ts  nav.ts
src/integrations/: github-content.ts  github.ts
src/layouts/: Layout.astro
src/pages/: about.astro  contact.astro  index.astro  test-github-component.astro
src/styles/: c2pa.css  carousel.css  code.css  essay.css  fonts.css  footer.css  gallery.css  global.css  header.css  hero.css  home.css  info-panel.css  lightbox.css  longform.css  pages.css  photogallery.css  post.css  thread.css  (+2 more)
tests/: mobile-navigation.spec.ts
(+95 files in other folders)
